--- a/CryptoBlog/public/styles/style.css
+++ b/CryptoBlog/public/styles/style.css
@@ -22,8 +22,6 @@ p {
     justify-content: center;
 }
 
-
-
 cards {
     width: 90%;
     display: inline-flex;
@@ -37,18 +35,19 @@ cards {
 .coin-class {
     display: grid;
     max-width: 300px;
-    min-width: 250px;
+    min-width: 270px;
     grid-template-columns: 1fr;
     grid-template-rows: minmax(50px, 60px) 1fr;
     grid-template: 
         "info"
         "chart";
-    border-radius: 30px;
+    border-radius: 5px;
 }
 
 .coin-class {
-    box-shadow: 10px 10px 20px 1px rgba(255, 255, 255, 0.15);
+    box-shadow: 10px 10px 20px 1px rgb(185, 158, 107);
     border-color: white;
+    margin-top: 5%;
 }
 
 .asset-info {
@@ -57,6 +56,7 @@ cards {
     justify-content: space-between;
     align-items: center;
     padding: 0 5% 0 5%;
+    margin-top: 3%;
 }
 
 .title {
@@ -79,4 +79,18 @@ img{
 
 .coin{
     width: 30%;
+}
+
+.jumbotron{
+    background-color:  #2a0a28;
+}
+
+.jumbotron-container{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.jumbotron-container p {
+    font-size: 30px;
 }
