--- a/CryptoBlog/views/newpost.ejs
+++ b/CryptoBlog/views/newpost.ejs
@@ -1,14 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-
-<body>
+<% layout('../layout/boilerplate.ejs') %>
     <h1>Create a new post</h1>
 
     <form action="/newpost" method="POST">
@@ -18,6 +8,3 @@
         <textarea id="description" name="description"></textarea>
         <button>Submit</button>
     </form>
-</body>
-
-</html>
