--- a/CryptoBlog/views/posts.ejs
+++ b/CryptoBlog/views/posts.ejs
@@ -1,16 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-
-<body>
-    <h1>POSTS</h1>
-
+<% layout('../layout/boilerplate.ejs') %>
     <div class="container">
         <div class="post-container">
             <div class="post">
@@ -38,8 +26,3 @@
         </div>
     </div>
     <a href="/newpost">Create a post</a>
-
-</body>
-<script src="../public/js/posts.js"></script>
-
-</html>
