--- a/CryptoBlog/views/newpost.ejs
+++ b/CryptoBlog/views/newpost.ejs
@@ -1,10 +1,14 @@
 <% layout('../layout/boilerplate.ejs') %>
-    <h1>Create a new post</h1>
 
-    <form action="/newpost" method="POST">
-        <label for="name">Enter header</label>
-        <input type="text" placeholder="enter name" id="name" name="name">
-        <label for="description">Description</label>
-        <textarea id="description" name="description"></textarea>
-        <button>Submit</button>
-    </form>
+    <div class="form-container">
+        <h1>Create a new post</h1>
+        <form action="/newpost" method="POST" id="form">
+            <div id="form-items">
+                <label for="name">Enter header</label>
+                <input type="text" placeholder="enter name" id="name" name="name">
+                <label for="description">Description</label>
+                <textarea id="description" name="description" rows="3"></textarea>
+                <button>Submit</button>
+            </div>
+        </form>
+    </div>
