--- a/CryptoBlog/public/styles/style.css
+++ b/CryptoBlog/public/styles/style.css
@@ -94,3 +94,36 @@ img{
 .jumbotron-container p {
     font-size: 30px;
 }
+
+.form-container{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+#form{
+    background-color: #2a0a28;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 30%;
+    height: 30rem;
+    color: white;
+}
+
+#form-items{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-self: center;
+    margin: auto;
+    width: 50%;
+    height: auto;
+}
+
+.post{
+    background-color:#2a0a28;
+    width: 80%;
+    height: 15%;
+    margin-top: 3%;
+}
