--- a/CryptoBlog/public/styles/style.css
+++ b/CryptoBlog/public/styles/style.css
@@ -1,5 +1,5 @@
 body{
-    background-color: #1C061A ;
+    background-color: #1C061A;
 }
 
 h1 {
@@ -20,6 +20,7 @@ p {
 .container {
     display: flex;
     justify-content: center;
+    align-items: center;
 }
 
 cards {
@@ -28,7 +29,7 @@ cards {
     flex-direction: row;
     justify-content: space-between;
     flex-wrap: wrap;
-    padding-top: 30px;
+    padding-top: 10px;
     padding-bottom: 30px;
 }
 
@@ -102,13 +103,14 @@ img{
 }
 
 #form{
-    background-color: #2a0a28;
+    background-color: rgb(234,234,234);
     display: flex;
     flex-direction: column;
     align-items: center;
+    border-radius: 8px;
     width: 30%;
     height: 30rem;
-    color: white;
+    color: black;
 }
 
 #form-items{
@@ -116,14 +118,67 @@ img{
     flex-direction: column;
     justify-content: center;
     align-self: center;
+    gap: 10px 30px;     
     margin: auto;
-    width: 50%;
+    width: 70%;
     height: auto;
 }
 
 .post{
-    background-color:#2a0a28;
+    background-color:rgb(234,234,234);
     width: 80%;
-    height: 15%;
+    height: 150px;
+    padding: 1rem;
     margin-top: 3%;
+    border-radius: 8px;
+}
+
+.post-container{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    color: black;
+
+}
+
+.container{
+    display: flex;
+    flex-direction: column;
+}
+
+button {
+    margin-top: 30px;
+    width: 20%;
+    color: white
+}
+
+a{
+    text-decoration: none;
+}
+
+.contents-container {
+    display: flex;
+    flex-direction: row;
+    margin-bottom: 5%;
+}
+
+.post p,h1 {
+    color: black
+}
+
+button a{
+    text-decoration: none;
+}
+
+#heading {
+    color:white
+}
+
+#submit{
+    width: 50%;
+}
+
+#logout-button{
+    width: 100px;
+    color: black;
 }
