--- a/CryptoBlog/views/home.ejs
+++ b/CryptoBlog/views/home.ejs
@@ -2,19 +2,21 @@
 
     <div class="jumbotron jumbotron-fluid">
         <div class="jumbotron-container">
-            <h1 class="display-4">CryptoBlog</h1>
+            <h1 class="display-4" style="color: white">CryptoBlog</h1>
             <p>The leading crypto discussion site on the web.</p>
         </div>
     </div>
 
     <container class="container">
         <cards class="cards">
+
+
             <coin class="coin-class">
                 <card class="asset-info">
                     <div class="title">
                         <img src="https://s3.us-east-2.amazonaws.com/nomics-api/static/images/currencies/btc.svg"
                             width="15%">
-                        <h1>Bitcoin</h1>
+                        <h1><a href="/posts/bitcoin">Bitcoin</a></h1>
                     </div>
                     <div class="details">
                         <h2 class="asset-price" id="price1"></h2>
@@ -28,7 +30,7 @@
                     <div class="title">
                         <img src="https://s3.us-east-2.amazonaws.com/nomics-api/static/images/currencies/atm.svg"
                             width="15%">
-                        <h1>Cosmos</h1>
+                        <h1><a href="/posts/cosmos">Cosmos</a></h1>
                     </div>
                     <div class="details">
                         <h2 class="asset-price" id="price2"></h2>
@@ -42,7 +44,7 @@
                     <div class="title">
                         <img src="https://s3.us-east-2.amazonaws.com/nomics-api/static/images/currencies/eth.svg"
                             width="10%">
-                        <h1>Ethereum</h1>
+                        <h1><a href="/posts/ethereum">Etherium</a></h1>
                     </div>
                     <div class="details">
                         <h2 class="asset-price" id="price3"></h2>
