--- a/CryptoBlog/views/posts.ejs
+++ b/CryptoBlog/views/posts.ejs
@@ -1,28 +1,22 @@
 <% layout('../layout/boilerplate.ejs') %>
-    <div class="container">
-        <div class="post-container">
-            <div class="post">
-                <h1>POST1</h1>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint voluptates veniam doloremque autem,
-                    dolorem rem similique unde quam? Enim debitis nulla quod, dicta aut mollitia sunt aliquid ullam
-                    perferendis distinctio.</p>
+    <div class="contents-container">
+        <div class="container">
+            <div class="post-container">
+
+                <% for(var i=0; i < posts.length; i++) { %>
+                    <div class="post">
+                        <h1>
+                            <%= posts[i].name %>
+                        </h1>
+                        <p>
+                            <%= posts[i].description %>
+                        </p>
+                    </div>
+                    <% } %>
             </div>
-            <div class="post">
-                <h1>POST1</h1>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint voluptates veniam doloremque autem,
-                    dolorem rem similique unde quam? Enim debitis nulla quod, dicta aut mollitia sunt aliquid ullam
-                    perferendis distinctio.</p>
-            </div>
-            <% for(var i=0; i < posts.length; i++) { %>
-                <div class="post">
-                    <h1>
-                        <%= posts[i].name %>
-                    </h1>
-                    <p>
-                        <%= posts[i].description %>
-                    </p>
-                </div>
-                <% } %>
+            <button type="button" class="btn btn-danger">
+                <a href='/newpost/<%= coinName %>'>Create a post</a>
+            </button>
         </div>
+
     </div>
-    <a href="/newpost">Create a post</a>
