--- a/CryptoBlog/partials/navbar.ejs
+++ b/CryptoBlog/partials/navbar.ejs
@@ -1,17 +1,20 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="/">CryptoBlog</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
-        aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-        <div class="navbar-nav">
-        </div>
-    </div>
+    <div class="nav-class">
 
-    <% if(id) { %>
-        <form action="/logout" method="POST">
-            <button id='logout-button' type='submit'>Log Out</button>
-        </form>
-        <% } %>
+        <a class="navbar-brand" href="/">CryptoBlog</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
+            aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+            <div class="navbar-nav">
+            </div>
+        </div>
+
+        <% if(id) { %>
+            <form id="logout-form" action="/logout" method="POST">
+                <button id='logout-button' type='submit'>Log Out</button>
+            </form>
+            <% } %>
+    </div>
 </nav>
