--- a/CryptoBlog/views/posts.ejs
+++ b/CryptoBlog/views/posts.ejs
@@ -1,22 +1,56 @@
-<% layout('../layout/boilerplate.ejs') %>
-    <div class="contents-container">
-        <div class="container">
-            <div class="post-container">
+<!DOCTYPE html>
+<html lang="en">
 
-                <% for(var i=0; i < posts.length; i++) { %>
-                    <div class="post">
-                        <h1>
-                            <%= posts[i].name %>
-                        </h1>
-                        <p>
-                            <%= posts[i].description %>
-                        </p>
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
+        integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <link rel="stylesheet" href="../public/styles/posts.css" />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.8.0/Chart.bundle.js"></script>
+    <title>Boilerplate</title>
+</head>
+
+<body>
+    <%- include('../partials/navbar.ejs') %>
+
+        <main class="main-container">
+
+
+            <div class="contents-container">
+                <div class="container">
+                    <div class="post-container">
+
+                        <% for(var i=0; i < posts.length; i++) { %>
+                            <div class="post">
+                                <h1>
+                                    <%= posts[i].name %> commented:
+                                </h1>
+                                <p class="description">
+                                    <%= posts[i].description %>
+                                </p>
+                            </div>
+                            <% } %>
                     </div>
-                    <% } %>
-            </div>
-            <button type="button" class="btn btn-danger">
-                <a href='/newpost/<%= coinName %>'>Create a post</a>
-            </button>
-        </div>
+                    <button type="button" class="btn btn-danger">
+                        <a href='/newpost/<%= coinName %>'>Create a post</a>
+                    </button>
+                </div>
 
-    </div>
+            </div>
+        </main>
+        <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+            integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+            crossorigin="anonymous"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
+            integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+            crossorigin="anonymous"></script>
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
+            integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+            crossorigin="anonymous"></script>
+        <script src="../public/js/index.js"></script>
+
+</body>
+
+</html>
