log and register error handling

--- a/CryptoBlog/partials/navbar.ejs
+++ b/CryptoBlog/partials/navbar.ejs
@@ -12,8 +12,8 @@
         </div>
 
         <% if(id) { %>
-            <form id="logout-form" action="/logout" method="POST">
-                <button id='logout-button' type='submit'>Log Out</button>
+            <form class="logout-form" action="/logout" method="POST">
+                <button class='logout-button' type='submit'>Log Out</button>
             </form>
             <% } %>
     </div>
