--- a/CryptoBlog/public/styles/style.css
+++ b/CryptoBlog/public/styles/style.css
@@ -105,6 +105,7 @@ img{
     display: flex;
     flex-direction: column;
     align-items: center;
+    margin-top: 5%;
 }
 
 #form{
@@ -183,7 +184,7 @@ button a{
     width: 50%;
 }
 
-#logout-button{
+.logout-button{
         width: 100px;
         min-height: 30px;
         border: none;
@@ -193,7 +194,6 @@ button a{
         font-size: 16px;
         margin: auto;
 }
-
 .nav-class{
     width: 100%;
     display: flex;
