flash login page

--- a/CryptoBlog/views/home.ejs
+++ b/CryptoBlog/views/home.ejs
@@ -1,6 +1,6 @@
 <% layout('../layout/boilerplate.ejs') %>
 
-    <div class="jumbotron jumbotron-fluid" style="border-radius: 12 px ">
+    <div class="jumbotron jumbotron-fluid">
         <div class="jumbotron-container">
             <h1 class="display-4" style="color: white">CryptoBlog</h1>
             <p>The leading crypto discussion site on the web.</p>
@@ -9,7 +9,6 @@
 
     <container class="container">
         <cards class="cards">
-
 
             <coin class="coin-class">
                 <card class="asset-info">
