--- a/CryptoBlog/views/posts.ejs
+++ b/CryptoBlog/views/posts.ejs
@@ -42,8 +42,8 @@
                             </div>
                             <% } %>
                     </div>
-                    <button type="button" class="btn btn-danger">
-                        <a href='/newpost/<%= coinName %>'>Create a post</a>
+                    <button type="button" class="btn btn-dark">
+                        <a style="color: white" href='/newpost/<%= coinName %>'>Create a post</a>
                     </button>
                 </div>
 
