--- a/CryptoBlog/public/styles/style.css
+++ b/CryptoBlog/public/styles/style.css
@@ -88,7 +88,7 @@ img{
 }
 
 .jumbotron{
-    background-color:  #5469d4;
+   background-color:#5469d4;
 }
 
 .jumbotron-container{
@@ -150,6 +150,7 @@ img{
 .container{
     display: flex;
     flex-direction: column;
+    margin-bottom: 50px;
 }
 
 button {
