--- a/CryptoBlog/views/newpost.ejs
+++ b/CryptoBlog/views/newpost.ejs
@@ -5,7 +5,7 @@
         <form action='/newpost/<%= coinName %>' method="POST" id="form">
             <div id="form-items">
                 <h1>Give your feedback!</h1>
-                <textarea id="description" placeholder="Description" name="description" rows=10"></textarea>
+                <textarea id="description" placeholder="Description" name="description" rows=10></textarea>
                 <button id="submit" type="submit" class="btn btn-danger">Submit</button>
             </div>
         </form>
