--- a/CryptoBlog/public/styles/posts.css
+++ b/CryptoBlog/public/styles/posts.css
@@ -1,5 +1,5 @@
 body{
-    background-color: #5469d4;
+    background-color: #ffffff;
 }
 
 h1 {
@@ -19,17 +19,18 @@ p {
 
 .container {
     display: flex;
+    flex-direction: row;
     justify-content: center;
-    align-items: center;
+    align-items: flex-start;
 }
 
 .cards {
-    width: 90%;
+    width: 50%;
     display: inline-flex;
     flex-direction: row;
     justify-content: space-between;
     flex-wrap: wrap;
-    padding-top: 10px;
+    padding-top: 0;
     padding-bottom: 30px;
     color: black;
 }
@@ -40,21 +41,18 @@ p {
 
 .coin-class {
     display: grid;
-    max-width: 300px;
-    min-width: 270px;
+    min-width: 100%;
     grid-template-columns: 1fr;
     grid-template-rows: minmax(50px, 60px) 1fr;
     grid-template: 
         "info"
         "chart";
     border-radius: 5px;
+    box-shadow: 10px 10px 20px 1px #5469d4;
+    border-color: white;
+    border-radius: 8px;
 }
 
-.coin-class {
-    box-shadow: 10px 10px 20px 1px rgb(185, 158, 107);
-    border-color: white;
-    margin-top: 5%;
-}
 
 .asset-info {
     grid-area: info;
@@ -116,6 +114,7 @@ img{
     width: 30%;
     height: 30rem;
     color: black;
+    margin-bottom: 5%;
 }
 
 #form-items{
@@ -134,7 +133,7 @@ img{
     width: 80%;
     height: 180px;
     padding: 1rem;
-    margin-top: 3%;
+    margin-bottom: 5%;
     border-radius: 8px;
     box-shadow: 10px 10px 5px grey;
 }
@@ -150,16 +149,45 @@ img{
 }
 
 .post-container{
-    width: 100%;
+    width: 50%;
     display: flex;
     flex-direction: column;
     color: black;
+    align-items: center;
+}
 
+input{
+    border: 2px solid #5469d4;
+    border-radius: 8px;
+    height: 50px;
+    padding: 0;
+}
+
+input::placeholder{
+    text-align:start;
+    padding-left: 10px;
+}
+
+#create-post{
+    width: 100%;
+    margin-top: 3%;
+    border-radius: 8px;
+    background-color: #5469d4;
+    border: none;
+}
+
+#create-post:hover{
+    background-color: white;
+    color: #5469d4;
+    border: none;
+    border: 1px solid #5469d4;
 }
 
 .container{
+    margin-top: 5%;
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
+    padding-top: 0;
 }
 
 button {
@@ -234,4 +262,23 @@ button a{
 .buttons{
     display: flex;
     flex-direction: row;
+}
+
+.coin-class{
+    background-color: white;
+    width: 30%;
+    height: auto;
+}
+
+canvas{
+    width: 100%;
+    height: auto;
+}
+
+.post-form{
+    width: 70%;
+    display: flex;
+    flex-direction: column;
+    margin-top: 5%;
+    margin-bottom: 5%;
 }
